--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-"name": "cyberkonsults",
-"version": "1.0.0",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-},
-"dependencies": {
-  "react": "^18.0.0",
-  "react-dom": "^18.0.0"
-},
-"devDependencies": {
-  "vite": "^4.0.0",
-  "tailwindcss": "^3.0.0",
-  "postcss": "^8.0.0",
-  "autoprefixer": "^10.0.0"
-}
+  "name": "cyberkonsults",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.0.0",
+    "vite": "^4.0.0",
+    "postcss": "^8.4.0",
+    "autoprefixer": "^10.4.0"
+  }
 }
